# SEM

./: .gitignore
DOC/source/: tutoriel.rst
MESH/CSRC/: mesh_grid.h
pysem/: pyproject.toml
pysem/src/pysem/: compute_pml_length.py  create_stations.py  create_xmf_from_mesh.py  generate_h5_materials.py  mt_import_gmsh.py  parse_h5_snapshots.py  parse_h5_traces.py  sem_stf.py
pysem/src/pysem/mt/: mesh_files.py  xdmf.py
